--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </section>
        <section>
         <h1>测试</h1>
+        <a href="https://github.com/lizhehong/lizhehong.github.io/linux/core">c测试连接</a>
       </section>
     </div>
     <footer>
