--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Lizhehong.GitHub.io by lizhehong</title>
+    <title>lizhehong Blog</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -24,15 +24,19 @@
           <li class="single"><a href="https://github.com/lizhehong/lizhehong.github.io">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section>
-        <h1>
-<a id="lizhehonggithubio" class="anchor" href="#lizhehonggithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>lizhehong.github.io</h1>
-
-<p>弘CSDN博客</p>
-      </section>
        <section>
-        <h1>测试</h1>
-        <a href="https://github.com/lizhehong/lizhehong.github.io/linux/core">c测试连接</a>
+        <h1>TIME: <small><time>2016-3-18-22:18</time></small></h1> 
+        <p>晚上</p>
+        <p class="view">
+         <a href="https://github.com/lizhehong/lizhehong.github.io/html/baseKnowLedge/java/ForkAndJoin.html">JDK 7 中的 Fork/Join 模式</a>
+        </p>
+      </section>
+      <section>
+        <h1>TIME: <small><time>2016-3-18-22:00</time></small></h1> 
+        <p>晚上</p>
+        <p class="view">
+         开始我的第一篇blog! <br>
+        </p>
       </section>
     </div>
     <footer>
