--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>TIME: <small><time>2016-3-18-22:18</time></small></h1> 
         <p>晚上</p>
         <p class="view">
-         <a href="https://github.com/lizhehong/lizhehong.github.io/html/baseKnowLedge/java/ForkAndJoin.html">JDK 7 中的 Fork/Join 模式</a>
+         <a href="lizhehong.github.io/html/baseKnowLedge/java/ForkAndJoin.html" >JDK 7 中的 Fork/Join 模式</a>
         </p>
       </section>
       <section>
