建立图册页面

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
           <li class="single"><a href="https://github.com/lizhehong/lizhehong.github.io">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-       <section>
+      <section>
+        <h1>TIME: <small><time>2016-3-23-15:47</time></small></h1>
+        <p>中午</p>
+        <p class="view">
+            <a href="lizhehong.github.io/html/baseKnowLedge/photo/demo1.html" >photo Slide demo</a>
+        </p>
+      </section>
+      <section>
         <h1>TIME: <small><time>2016-3-18-22:18</time></small></h1> 
         <p>晚上</p>
         <p class="view">
