--- a/html/baseKnowLedge/photo/demo1.html
+++ b/html/baseKnowLedge/photo/demo1.html
@@ -21,7 +21,7 @@
     </section>
 </div>
 <footer>
-    <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/lizhehong">lizhehong</a></p>
 </footer>
 <script src="http://photoswipe.com/dist/photoswipe.min.js?v=4.1.1-1.0.4"></script>
 <script src="http://photoswipe.com/dist/photoswipe-ui-default.min.js?v=4.1.1-1.0.4"></script>
