--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
     </div>
     <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/lizhehong">lizhehong</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
