--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
         </ul>
       </header>
       <section>
+        <h1>TIME: <small><time>2016-3-24-03:17</time></small></h1>
+        <p>凌晨</p>
+        <p class="view">
+            <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/config.html"><h4>config页面</h4></a>
+            <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/devList.html"><h4>devList页面</h4></a>
+            <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/login.html"><h4>login页面</h4></a>
+            <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/reister.html"><h4>reister页面</h4></a>
+            <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/smartLink.html"><h4>smartLink页面</h4></a>
+        </p>
+      </section>
+      <section>
         <h1>TIME: <small><time>2016-3-23-15:47</time></small></h1>
         <p>中午</p>
         <p class="view">
