--- a/html/baseKnowLedge/graduation project/devList.html
+++ b/html/baseKnowLedge/graduation project/devList.html
@@ -12,6 +12,7 @@
 
 <body class="ui-mobile-viewport ui-overlay-a">
     <div data-role="header">
+        <a class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext" data-rel="back">返回</a>
         <h1>设备云</h1>
     </div>
     <div role="main" class="ui-content">
