--- a/html/baseKnowLedge/graduation project/login.html
+++ b/html/baseKnowLedge/graduation project/login.html
@@ -13,6 +13,7 @@
 <body class="ui-mobile-viewport ui-overlay-a">
     <div tabindex="0" class="ui-page ui-page-theme-a ui-page-active" data-role="page">
         <div data-role="header">
+            <a class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext" data-rel="back">返回</a>
             <h1>登录</h1>
         </div>
         <!-- /header -->
