--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/config.html"><h4>config页面</h4></a>
             <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/devList.html"><h4>devList页面</h4></a>
             <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/login.html"><h4>login页面</h4></a>
-            <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/reister.html"><h4>reister页面</h4></a>
+            <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/register.html"><h4>register页面</h4></a>
             <a href="lizhehong.github.io/html/baseKnowLedge/graduation project/smartLink.html"><h4>smartLink页面</h4></a>
         </p>
       </section>
