--- a/html/baseKnowLedge/graduation project/smartLink.html
+++ b/html/baseKnowLedge/graduation project/smartLink.html
@@ -3,7 +3,11 @@
 
 <head>
     <title>smartLink</title>
-    <%@ include file="/jsp/comm/head.jsp"%>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <script src="http://code.jquery.com/jquery-1.12.2.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 
 <body class="ui-mobile-viewport ui-overlay-a">
