--- a/html/baseKnowLedge/graduation project/login.html
+++ b/html/baseKnowLedge/graduation project/login.html
@@ -28,15 +28,15 @@
                         <button class="ui-corner-all ui-btn">登录</button>
                     </div>
                     <div class="ui-block-b">
-                        <a href="${pageContext.request.contextPath}/jsp/register.jsp" data-transition="slide" class="ui-btn">注册</a>
+                        <a href="register.html" data-transition="slide" class="ui-btn">注册</a>
                     </div>
                 </div>
                 <div class="ui-grid-a">
                     <div class="ui-block-a">
-                        <a href="${pageContext.request.contextPath}/jsp/config.jsp" data-transition="slide" class="ui-btn">配置</a>
+                        <a href="config.html" data-transition="slide" class="ui-btn">配置</a>
                     </div>
                     <div class="ui-block-b">
-                        <a href="${pageContext.request.contextPath}/jsp/smartLink.jsp" data-transition="slide" class="ui-btn">SmartLink</a>
+                        <a href="smartLink.html" data-transition="slide" class="ui-btn">SmartLink</a>
                     </div>
                 </div>
             </form>
