--- a/html/baseKnowLedge/photo/demo1.html
+++ b/html/baseKnowLedge/photo/demo1.html
@@ -16,8 +16,6 @@
         <h2>photo Slide demo</h2>
     </header>
     <section>
-    	<h1>请点击下面的按钮</h1>
-    	<button onclick="openSlide();">嘻嘻</button>
     </section>
 </div>
 <footer>
@@ -27,10 +25,118 @@
 <script src="http://photoswipe.com/dist/photoswipe-ui-default.min.js?v=4.1.1-1.0.4"></script>
 <script src="../../../javascripts/scale.fix.js"></script>
 <script type="text/javascript">
-function openSlide(){
-	var section = document.querySelector("section");
-	var arr =  [];
-	arr.push('<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">');
+(function(){
+    var section = document.querySelector("section");
+    section.innerHTML= initSection();
+}());
+function initSection(){
+    var arr = [];
+    arr.push('<h1>请点击下面的按钮</h1>');
+    arr.push('<h3>幻灯片show</h3>');
+    arr.push('<button onclick="openSlide();">弹出幻灯片</button>');
+    arr.push('<h3>不同分辨率下的图片加载</h3>');
+    arr.push('<button onclick="responsiveImages();">Responsive Images</button>');
+    return arr.join("");
+}
+function responsiveImages(){
+    var options = {
+        index: 0 
+    };
+    var items = [
+        // Slide 1
+        {
+            mediumImage: {
+                src: 'http://gdp.alicdn.com/imgextra/i4/774950933/TB2bENYmXXXXXa3XpXXXXXXXXXX_!!774950933.jpg',
+                w:800,
+                h:600
+            },
+            originalImage: {
+                src: 'http://gdp.alicdn.com/imgextra/i3/774950933/TB2_vQjlFXXXXcAXXXXXXXXXXXX_!!774950933.jpg',
+                w: 1400,
+                h: 1050
+            }
+        }
+    ];
+    var section = document.querySelector("section");
+    var contrainer = createContrainer();
+    section.innerHTML = section.innerHTML + contrainer;
+    var pswpElement = document.querySelectorAll('.pswp')[0];
+    // initialise as usual
+    var gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options);
+
+    // create variable that will store real size of viewport
+    var realViewportWidth,
+        useLargeImages = false,
+        firstResize = true,
+        imageSrcWillChange;
+
+    // beforeResize event fires each time size of gallery viewport updates
+    gallery.listen('beforeResize', function() {
+        // gallery.viewportSize.x - width of PhotoSwipe viewport
+        // gallery.viewportSize.y - height of PhotoSwipe viewport
+        // window.devicePixelRatio - ratio between physical pixels and device independent pixels (Number)
+        //                          1 (regular display), 2 (@2x, retina) ...
+
+
+        // calculate real pixels when size changes
+        realViewportWidth = gallery.viewportSize.x * window.devicePixelRatio;
+
+        // Code below is needed if you want image to switch dynamically on window.resize
+
+        // Find out if current images need to be changed
+        if(useLargeImages && realViewportWidth < 1000) {
+            useLargeImages = false;
+            imageSrcWillChange = true;
+        } else if(!useLargeImages && realViewportWidth >= 1000) {
+            useLargeImages = true;
+            imageSrcWillChange = true;
+        }
+
+        // Invalidate items only when source is changed and when it's not the first update
+        if(imageSrcWillChange && !firstResize) {
+            // invalidateCurrItems sets a flag on slides that are in DOM,
+            // which will force update of content (image) on window.resize.
+            gallery.invalidateCurrItems();
+        }
+
+        if(firstResize) {
+            firstResize = false;
+        }
+
+        imageSrcWillChange = false;
+
+    });
+
+
+    // gettingData event fires each time PhotoSwipe retrieves image source & size
+    gallery.listen('gettingData', function(index, item) {
+
+        // Set image source & size based on real viewport width
+        if( useLargeImages ) {
+            item.src = item.originalImage.src;
+            item.w = item.originalImage.w;
+            item.h = item.originalImage.h;
+        } else {
+            item.src = item.mediumImage.src;
+            item.w = item.mediumImage.w;
+            item.h = item.mediumImage.h;
+        }
+
+        // It doesn't really matter what will you do here, 
+        // as long as item.src, item.w and item.h have valid values.
+        // 
+        // Just avoid http requests in this listener, as it fires quite often
+
+    });
+
+
+    // Note that init() method is called after gettingData event is bound
+    gallery.init();
+
+}
+function createContrainer(){
+    var arr =  [];
+    arr.push('<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">');
     arr.push('        <div class="pswp__bg"></div>');
     arr.push('        <div class="pswp__scroll-wrap">');
     arr.push('            <div class="pswp__container">');
@@ -41,7 +147,7 @@ function openSlide(){
     arr.push('            <div class="pswp__ui pswp__ui--hidden">');
     arr.push('                <div class="pswp__top-bar">');
     arr.push('                    <div class="pswp__counter"></div>');
-   	arr.push('                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>');
+    arr.push('                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>');
     arr.push('                    <button class="pswp__button pswp__button--share" title="Share"></button>');
     arr.push('                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>');
     arr.push('                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>');
@@ -66,7 +172,12 @@ function openSlide(){
     arr.push('            </div>');
     arr.push('        </div>');
     arr.push('    </div>');
-	section.innerHTML = section.innerHTML + arr.join("");
+    return arr.join("");;
+}
+function openSlide(){
+	var section = document.querySelector("section");
+	var contrainer = createContrainer();
+	section.innerHTML = section.innerHTML + contrainer;
 	var pswpElement = document.querySelectorAll('.pswp')[0];
 	console.log(pswpElement);
 	// build items array
@@ -91,8 +202,7 @@ function openSlide(){
 	var gallery = new PhotoSwipe(pswpElement, PhotoSwipeUI_Default, items, options);
 	gallery.init();
 	gallery.listen('close', function() { 
-		alert("1");
-		section.innerHTML='<h1>请点击下面的按钮</h1><button onclick="openSlide();">嘻嘻</button>';
+		section.innerHTML= initSection();
 	});
 }
 
